After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 568516 - "Nested extern declaration" warning
"Nested extern declaration" warning
Status: RESOLVED FIXED
Product: gdm
Classification: Core
Component: general
2.24.x
Other Mac OS
: Normal normal
: ---
Assigned To: GDM maintainers
GDM maintainers
Depends on:
Blocks:
 
 
Reported: 2009-01-21 03:51 UTC by Daniel Macks
Modified: 2009-12-21 21:28 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Clear the warning (1.24 KB, patch)
2009-01-21 03:53 UTC, Daniel Macks
committed Details | Review

Description Daniel Macks 2009-01-21 03:51:03 UTC
gdm-2.24.1 on OS X 10.4, which has tcp-wrappers support:

gcc -DHAVE_CONFIG_H -I. -I.. -I. -I.. -I../common -DAUTHDIR=\"/sw/var/gdm\" -DBINDIR=\"/sw/bin\" -DDATADIR=\"/sw/share\" -DDMCONFDIR=\"/sw/etc/dm\" -DGDMCONFDIR=\"/sw/etc/gdm\" -DGDMLOCALEDIR=\"/sw/etc/gdm\" -DLIBDIR=\"/sw/lib\" -DLIBEXECDIR=\"/sw/lib/gdm\" -DLOGDIR=\"/sw/var/log/gdm\" -DPIXMAPDIR=\"/sw/share/pixmaps\" -DSBINDIR=\"/sw/sbin\" -DGNOMELOCALEDIR=\""/sw/share/locale"\" -DGDM_XAUTH_DIR=\"/sw/var/run/gdm\" -DGDM_DEFAULTS_CONF=\"/sw/share/gdm/defaults.conf\" -DGDM_CUSTOM_CONF=\"/sw/etc/gdm/custom.conf\" -DGDM_OLD_CONF=\"/sw/etc/gdm/gdm.conf\"  -I/sw/include/glib-2.0 -I/sw/lib/glib-2.0/include -I/sw/include/dbus-1.0 -I/sw/lib/dbus-1.0/include -I/usr/X11R6/include -Wall -Wmissing-prototypes  -DG_ENABLE_DEBUG -DLANG_CONFIG_FILE=\"/sw/etc/sysconfig/i18n\"   -I/sw/include  -Wall         -Wchar-subscripts -Wmissing-declarations -Wmissing-prototypes         -Wnested-externs -Wpointer-arith         -Wcast-align -Wsign-compare -Wp,-D_FORTIFY_SOURCE=2         -g -O2 -Wno-strict-aliasing -Wno-sign-compare -c gdm-xdmcp-display-factory.c
gdm-xdmcp-display-factory.c: In function 'gdm_xdmcp_host_allow':
gdm-xdmcp-display-factory.c:615: warning: nested extern declaration of 'hosts_ctl'

That about sums it up...the extern declaration should be loose in the .c rather than within the function.
Comment 1 Daniel Macks 2009-01-21 03:53:53 UTC
Created attachment 126900 [details] [review]
Clear the warning
Comment 2 Ray Strode [halfline] 2009-12-21 21:28:33 UTC
Comment on attachment 126900 [details] [review]
Clear the warning

looks like this landed a while ago.