Fix "Nested extern declaration" warning

Move an extern declaration out of a function definition
to silence gcc warnings.

See http://bugzilla.gnome.org/show_bug.cgi?id=568516